--- a/src/Components/Header/SecondRow/SecondRow.css
+++ b/src/Components/Header/SecondRow/SecondRow.css
@@ -4,6 +4,12 @@
 }
 .searchbox{
 	width:40rem!important;
-	height: 1.4rem;
+	height: 2rem;
 	border: 1px solid black;
+}
+.searchbtn{
+	margin-left: 5px !important;
+}
+.SecondRow{
+	margin: 2% 0%;
 }
