--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -5,7 +5,7 @@
   width: 100%;
 }
 
-/* Actual footer container. Contain ".footer__logo1" --> ".footer__links" -->".footer__logo2" */
+/* Actual footer container. */
 .footer {
   display: flex;
   flex-wrap: wrap;
@@ -15,8 +15,7 @@
   width: 100%;
 }
 
-.footer__logo1,
-.footer__logo2 {
+.footer__logo1{
   align-self: center; /* Vertically centering */
   flex-basis: 200px; /* Making logo always should be 200px */
 }
@@ -48,17 +47,7 @@
   padding-bottom: 20px;
 }
 
-/* ------------------------------ MEDIA QUARRIES ------------------------------ */
-
-/**
- * Hide ".footer__logo1"
- * Set full width to ".footer__links" and this makes ".footer__logo1" wrap to next line
-**/
-
 @media screen and (max-width: 950px) {
-  .footer__logo1 {
-    display: none;
-  }
 
   .footer__links {
     flex: 1;
@@ -70,10 +59,5 @@
 
   .footer__links__column {
     flex: 0 1 150px;
-  }
-
-  .footer__logo2 {
-    display: initial;
-    margin: 0 auto;
   }
 }
