--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,6 +3,7 @@
   border-bottom: 16.1px solid var(--site-purple);
   border-top: 6.1px solid var(--border-color);
   width: 100%;
+  border-top: 1px solid blue;
 }
 
 /* Actual footer container. */
