--- a/src/Components/ProjectPage/ProjectPage.css
+++ b/src/Components/ProjectPage/ProjectPage.css
@@ -1,39 +1,52 @@
-.project-page{
-	margin-left:7.5%;
+.project-page {
+	margin-left: 7.5%;
 	margin-right: 7.5%;
 }
-.box{
-	border:1px solid black;
+.box {
+	border: 1px solid black;
 	padding: 3.5px 12px 3.5px 12px;
 }
-.detail{
+.detail {
 	margin-bottom: 1.5%;
 	margin-right: 2%;
-	color:white;
+	color: white;
 }
-.name{
-	background-color:#333;
+.name {
+	background-color: #333;
 }
-.content{
-	background-color:#cb3837;
+.content {
+	background-color: #cb3837;
 }
-.project-info{
+.project-info {
 	margin-top: 1%;
 }
-.project-info{
+.project-info {
 	line-height: 1.5;
 }
-.feature-list li{
+.feature-list li {
 	line-height: 1.75;
 }
-table, td, th {    
-    border: 1px solid #ddd;
-    text-align: left;
+table,
+td,
+th {
+	border: 1px solid #ddd;
+	text-align: left;
 }
 table {
-    border-collapse: collapse;
-    width: 100%;
+	border-collapse: collapse;
+	width: 100%;
 }
-th, td {
-    padding: 25px;
+th,
+td {
+	padding: 25px;
+}
+.highlight {
+	background-color: #f0f0f0;
+	color: #000;
+	margin-bottom: 16px;
+	border-radius: 3px;
+	padding: 15px;
+}
+.resources a{
+	text-decoration: none;
 }
