--- a/src/Components/ProjectPage/ProjectPage.css
+++ b/src/Components/ProjectPage/ProjectPage.css
@@ -38,7 +38,15 @@ table {
 }
 th,
 td {
-	padding: 25px;
+	padding: 15px;
+	text-align: center;
+}
+th svg {
+	width: 50px;
+	height: 50px;
+	fill: navy;
+	border-radius: 50%;
+	padding: 10px;
 }
 .highlight {
 	background-color: #f0f0f0;
@@ -47,9 +55,9 @@ td {
 	border-radius: 3px;
 	padding: 15px;
 }
-.resources a{
+.resources a {
 	text-decoration: none;
 }
-.keyword-btn{
-	margin-right: 2.5%!important;
+.keyword-btn {
+	margin-right: 2.5% !important;
 }
